force-app/main/default/objects/LiveChatTranscript/fields/Chat_Visitor_Email__c.field-meta.xml
<CustomField>
    <fullName>Chat_Visitor_Email__c</fullName>
    <description>The Chat Visitor&apos;s email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Chat Visitor Email</label>
    <type>Email</type>
</CustomField>