force-app/main/default/objects/LiveChatTranscript/fields/Customer_Education_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Education_Comments__c</fullName>
    <label>Customer Education Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>