force-app/main/default/objects/LiveChatTranscript/fields/Draft_of_email_response__c.field-meta.xml
<CustomField>
    <fullName>Draft_of_email_response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Draft of email/response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>