force-app/main/default/objects/LiveChatTranscript/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>Created to pass data to Leads from chat.</description>
    <label>Landing Page</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>