force-app/main/default/objects/LiveChatTranscript/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>For internal chat. For captains to take notes while chatting with an advocate.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>APS Feedback Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>