force-app/main/default/objects/LiveChatTranscript/fields/Record_Summary__c.field-meta.xml
<CustomField>
    <fullName>Record_Summary__c</fullName>
    <label>Record Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>