force-app/main/default/objects/LiveChatTranscript/fields/Reminder_Timestamp_2__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Timestamp_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder Timestamp 2</label>
    <type>DateTime</type>
</CustomField>