force-app/main/default/objects/LiveChatTranscript/fields/Request_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Request_from_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request from Vendor</label>
    <type>Checkbox</type>
</CustomField>