force-app/main/default/objects/LiveChatTranscript/fields/Tab_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Tab_Close_Time__c</fullName>
    <description>When the chat window is closed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tab Close Time</label>
    <type>DateTime</type>
</CustomField>