force-app/main/default/objects/LiveChatTranscript/fields/Trk_Device__c.field-meta.xml
<CustomField>
    <fullName>Trk_Device__c</fullName>
    <description>Created to pass data to Leads from chat.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>