force-app/main/default/objects/LiveChatTranscript/fields/Visitor_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Employee_Count__c</fullName>
    <description>To store employee count entered by visitor on chat bot. Created during Gcorp - v2 build</description>
    <label>Visitor Employee Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-9 Employees</fullName>
            </value>
            <value>
                <fullName>10-24 Employees</fullName>
            </value>
            <value>
                <fullName>25-99 Employees</fullName>
            </value>
            <value>
                <fullName>100+ Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>