force-app/main/default/objects/LiveChatTranscript/fields/Was_there_a_help_article__c.field-meta.xml
<CustomField>
    <fullName>Was_there_a_help_article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was there a help article?</label>
    <type>Checkbox</type>
</CustomField>