force-app/main/default/objects/LiveChatTranscript/fields/ZP_User_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_User_Id__c</fullName>
    <description>The ZP User Id we get from chat</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ZP User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>