force-app/main/default/objects/LiveChatTranscript/validationRules/Mandatory_Feedback_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Feedback_Notes</fullName>
    <active>true</active>
    <description>Notes should be filled when PE_Follow_Up_Recommended__c checkbox is checked.</description>
    <errorConditionFormula>PE_Follow_Up_Recommended__c  &amp;&amp;  Notes__c  = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please fill in feedback notes</errorMessage>
</ValidationRule>