force-app/main/default/objects/LiveChatTranscript/validationRules/Require_IKB_Article_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_IKB_Article_Link</fullName>
    <active>true</active>
    <description>IKB Article Link should be filled.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(
             IKB_Help_Center_Confluence_article_or_ot__c,      
             &apos;Yes, but needs an update&apos;
    ),
    ISBLANK(IKB_Article_Link__c))</errorConditionFormula>
    <errorDisplayField>IKB_Article_Link__c</errorDisplayField>
    <errorMessage>Please add a IKB Article Link</errorMessage>
</ValidationRule>